--- a/WebApp/Views/Home/ServicesAndPrices.cshtml
+++ b/WebApp/Views/Home/ServicesAndPrices.cshtml
@@ -1,7 +1,144 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<WebApp.Classes.SharedResource> SharedLocalizer
+
 @{
-    ViewData["Title"] = "ServicesAndPrices";
+    ViewBag.Title = @SharedLocalizer["ServicesAndPrices"];
+    ViewBag.CurrentPage = "ServicesAndPrices";
 }
 
-<h1>ServicesAndPrices</h1>
+<section class="section bg-light">
+    <div class="container">
 
+        <div class="row">
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/lechenie_desen.jpg")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params">
+                        <h3 class="mt-0">
+                            <a href="#" class="text-black">
+                                @*Обследование*@
+                                @*@Resources.Resource.Survey*@
+                                @SharedLocalizer["Survey"]
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>@SharedLocalizer["RoutineInspection"]</li> @*профосмотр*@
+                            <li>@SharedLocalizer["SpecialistConsultation"]</li> @*консультация специалиста*@
+                            <li>@SharedLocalizer["DentalRadiography"]</li> @*дентальная ренгенография*@
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/services-1081_02.png")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params">
+                        <h3 class="mt-0">
+                            <a href="#" class="text-black">
+                                @*Терапевтическое лечение*@
+                                @SharedLocalizer["TherapeuticTreatment"]
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>@SharedLocalizer["TreatmentOfCaries"]</li> @*лечение кариеса*@
+                            <li>@SharedLocalizer["TreatmentOfPulpitis"]</li> @*лечение пульпиту*@
+                            <li>@SharedLocalizer["PeriodontitisTreatment"]</li> @*лечение периодонтиту*@
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/gigiena.jpg")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params">
+                        <h3 class="mt-0 ">
+                            <a href="#" class="text-black">
+                                @*Ортопедия*@
+                                @SharedLocalizer["Orthopedics"]
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>@SharedLocalizer["SingleCrowns"]</li> @*одиночные коронки*@
+                            <li>@SharedLocalizer["Bridge_likeDentures"]</li> @*мостоподобные протезы*@
+                            <li>@SharedLocalizer["RemovableProsthetics"]</li> @*сьёмное протезирование*@
+                            <li>@SharedLocalizer["MetalCeramics"]</li> @*металокерамика*@
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="row">
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/udalenie.jpg")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params">
+                        <h3 class="mt-0">
+                            <a href="#" class="text-black">
+                                @*Хирургия*@
+                                @SharedLocalizer["Surgery"]
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>@SharedLocalizer["RemovalOfTooth"]</li> @*удаление зуба*@
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/protezirovanie_02.jpg")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params" style="min-height:200px;">
+                        <h3 class="mt-0">
+                            <a href="#" class="text-black">
+                                @*Протезирование*@
+                                @SharedLocalizer["Prosthetics"]
+                            </a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 element-animate">
+                <div class="media d-block media-custom text-left">
+                    @*<a href="#">*@
+                    <img src='@Url.Content("~/img/Services/otbelivanie.jpg")' alt="Image Placeholder" class="img-fluid">
+                    @*</a>*@
+                    <div class="media-body media-body-my-params">
+                        <h3 class="mt-0">
+                            <a href="#" class="text-black">
+                                @*Профилактика и эстетика*@
+                                @SharedLocalizer["PreventionAndAesthetics"]
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>@SharedLocalizer["RemovalOfDentalPlaque"]</li> @*удаление зубных отложений*@
+                            <li>@SharedLocalizer["CoatingTeethFluorideVarnish"]</li> @*покрытие зубов фтор-лаком*@
+                            <li>@SharedLocalizer["SealingFigures"]</li> @*герметизация фигур*@
+                            <li>@SharedLocalizer["Silvering"]</li> @*серебление*@
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</section>
